# django-qcapp-ratings

./: .gitignore  pyproject.toml
src/django_qcapp_ratings/: admin.py  api.py  apps.py  datasets.py  forms.py  models.py  selectors.py  tasks.py  urls.py  views.py  widgets.py
src/django_qcapp_ratings/management/commands/: _private.py  add_dtifit.py  add_fmap_coregistration.py  add_masks.py  add_spatial_normalization.py  add_surface_localization.py
src/django_qcapp_ratings/migrations/: 0001_initial.py  0002_clickedcoordinate_comments_rating_comments_and_more.py
src/django_qcapp_ratings/static/ratings/: clicks.js  selects.js  style.css  themes.js
src/django_qcapp_ratings/templates/: base.html  click.html  click_partial.html  form.html  rate.html  rate_partial.html
src/qcapp_ratings/: apps.py  urls.py  views.py
tools/: make_layout
